--- a/ng-app/src/app/standard/standard-list/standard-list.component.html
+++ b/ng-app/src/app/standard/standard-list/standard-list.component.html
@@ -11,46 +11,48 @@
 
 <app-standard-filter [filterList]="filterList" [(queryModel)]="queryModel" (refresh)="applyFilter()"> </app-standard-filter>
 
-<table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z2 standard-table" (matSortChange)="sortData($event)">
-    <!-- Checkbox Column -->
-    <ng-container matColumnDef="checkbox">
-        <th mat-header-cell *matHeaderCellDef>#</th>
-        <td mat-cell *matCellDef="let item" class="td-checkbox">
-            <mat-checkbox [(ngModel)]="item.selected" (change)="toggleItemSelection()"></mat-checkbox>
-        </td>
-    </ng-container>
+<div class="table-wrapper">
+  <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z2 standard-table" (matSortChange)="sortData($event)">
+      <!-- Checkbox Column -->
+      <ng-container matColumnDef="checkbox">
+          <th mat-header-cell *matHeaderCellDef>#</th>
+          <td mat-cell *matCellDef="let item" class="td-checkbox">
+              <mat-checkbox [(ngModel)]="item.selected" (change)="toggleItemSelection()"></mat-checkbox>
+          </td>
+      </ng-container>
 
-    <ng-container [matColumnDef]="col.name" *ngFor="let col of columns">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
-            {{ col.displayName }}
-        </th>
-        <td mat-cell *matCellDef="let item" [ngStyle]="{width: col.width}">
-            <span *ngIf="col.format === 'display'">{{ getValue(item, col) }}</span>
-            <a [routerLink]="[getLink(item, col)]" *ngIf="col.format === 'link'">{{ getValue(item, col) }}</a>
-            <div *ngIf="col.format === 'template'">
-                <!-- {{ renderTemplate(col, item) }} -->
-                <span [innerHTML]="renderTemplate(col, item)"></span>
-            </div>
-        </td>
-    </ng-container>
+      <ng-container [matColumnDef]="col.name" *ngFor="let col of columns">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>
+              {{ col.displayName }}
+          </th>
+          <td mat-cell *matCellDef="let item" [ngStyle]="{'min-width': col.width}">
+              <span *ngIf="col.format === 'display'">{{ getValue(item, col) }}</span>
+              <a [routerLink]="[getLink(item, col)]" *ngIf="col.format === 'link'">{{ getValue(item, col) }}</a>
+              <div *ngIf="col.format === 'template'">
+                  <!-- {{ renderTemplate(col, item) }} -->
+                  <span [innerHTML]="renderTemplate(col, item)"></span>
+              </div>
+          </td>
+      </ng-container>
 
-    <!-- Action Column -->
-    <ng-container matColumnDef="action">
-        <th mat-header-cell *matHeaderCellDef>Action</th>
-        <td mat-cell *matCellDef="let item">
-            <div class="btn-group" *ngIf="isAuth">
-                <button mat-icon-button matTooltip="Edit" matTooltipPosition="above" [routerLink]="['/' + domainName + '/edit', item._id]">
-                    <mat-icon class="icon-xs">edit</mat-icon>
-                </button>
-                <button mat-icon-button matTooltip="Delete" matTooltipPosition="above" color="warn" (click)="delete(item)">
-                    <mat-icon class="icon-xs">delete</mat-icon>
-                </button>
-            </div>
-        </td>
-    </ng-container>
+      <!-- Action Column -->
+      <ng-container matColumnDef="action">
+          <th mat-header-cell *matHeaderCellDef>Action</th>
+          <td mat-cell *matCellDef="let item" class="td-action">
+              <div class="btn-group" *ngIf="isAuth">
+                  <button mat-icon-button matTooltip="Edit" matTooltipPosition="above" [routerLink]="['/' + domainName + '/edit', item._id]">
+                      <mat-icon class="icon-xs">edit</mat-icon>
+                  </button>
+                  <button mat-icon-button matTooltip="Delete" matTooltipPosition="above" color="warn" (click)="delete(item)">
+                      <mat-icon class="icon-xs">delete</mat-icon>
+                  </button>
+              </div>
+          </td>
+      </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-</table>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
+</div>
 
 <mat-paginator [length]="totalItems" [pageSizeOptions]="[10, 25, 100]"></mat-paginator>
